Fixed wrap on reset style bar

--- a/src/app/sass/vehicle.scss
+++ b/src/app/sass/vehicle.scss
@@ -45,13 +45,12 @@
 		font-size: 24px;
 		margin: 20px 0px 10px;
 		padding:10px 15px;
-		height: 60px;
+		height: auto;
 		background-color: #F5F5F5;
 		border-radius: 4px 4px 4px 4px;
 	}
 
 	.clear-style-btn {
-		margin-left: 15px;
 		margin-bottom: 5px;
 		background-color: #000000;
 		color: #FFFFFF;
